k8s/mongodb-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: po-lin-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: po-lin-mongo
        image: mongo:latest
        ports:
        - containerPort: 27017
