k8s/mongodb-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: po-lin-expensy-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expensy-backend
  template:
    metadata:
      labels:
        app: expensy-backend
    spec:
      containers:
      - name: po-lin-expensy-backend
        image: barberry/ironhack-expensy-backend
        ports:
        - containerPort: 8706
